# viz3

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt  setup.py
examples/: Makefile  viz-realtime-procs.py  viz-runner.py
examples/cache/: SELECT_lastbusid_AS_busid_FROM_nvidia_GROUP_BY_.run_query.json  SELECT_lastfanspeed_AS_fanspeed_FROM_nvidia_GROUP_BY_.run_query.json  SELECT_lastgpuactive_AS_gpuactive_FROM_nvidia_GROUP_BY_.run_query.json  SELECT_lastmemactive_AS_memactive_FROM_nvidia_GROUP_BY_.run_query.json  SELECT_lastperfstate_AS_perfstate_FROM_nvidia_GROUP_BY_.run_query.json  SELECT_lasttemp_AS_temp_FROM_nvidia_GROUP_BY_.run_query.json  __name__measurementsExternalSensorValue__instance__sensorID1.query.json  __name__measurementsExternalSensorValue__instance__sensorID2.query.json  __name__measurementsInletSensorValue__instance__sensorType5.query.json  __name__redfish_chassis_fan_rpm_lower_threshold_critical__chassis_id__fan__instance.query.json  __name__redfish_chassis_fan_rpm_percentage__chassis_id__fan__instance.query.json  __name__redfish_chassis_fan_rpm_upper_threshold_critical__chassis_id__fan__instance.query.json  __name__redfish_chassis_health__chassis_id__instance.query.json  __name__redfish_chassis_network_adapter_health_state__chassis_id__instance__network_adapter_id.query.json  __name__redfish_chassis_power_powersupply_last_power_output_watts_percentage__chassis_id__instance__power_supply_id.query.json  __name__redfish_chassis_temperature_celsius__chassis_id__instance__sensor.query.json  __name__redfish_system_memory_capacity__instance__memory_id.query.json  __name__redfish_system_memory_health_state__instance__memory_id.query.json  __name__redfish_system_processor_health_state__instance__processor.query.json  __name__redfish_system_processor_health_state__instance__processor_id.query.json  __name__redfish_system_total_processor_count__instance__system_id.query.json  __name__tempSensorTempC__tempSensorName.query.json  _any_host.series.json  _any_host__instance.series.json  chassis_id__instance__network_adapter_id.query.json  chassis_id__instance__power_supply_id.query.json  chassis_id__instance__sensor.query.json  instance.label_values.json  instance__memory_id.query.json  instance__processor.query.json
examples/conf/: influxdb-gpus.yaml  infradb.yaml  pcp.yaml  prometheus-snmp.yaml  redfish.yaml  viz3.yaml
examples/data/: Makefile  README  envs.txt  infra.db  locations.txt  machines.txt  manufacturers.txt  pdus.txt  redfish-machines.txt
examples/models/: gpu.xml  lmsensor-motherboard.xml  machine_room.rack.simple.xml  machine_room.simple.xml  machine_room.xml  network-spider.xml  network-test-street.xml  network.xml  pcp-motherboard.xml  redfish-motherboard.xml  (+3 more)
scripts/: check_locations.awk  generate-influxdb-yaml.py  generate-pcp-yaml.py  generate-prometheus-yaml.py  graph-yaml.py  make-infradb.py
src/: bounds.cpp  bounds.hpp  box.cpp  box.hpp  color.cpp  color.hpp  coords.cpp  coords.hpp  element.hpp  event.cpp  event.hpp  feature.cpp  feature.hpp  geometry.cpp  geometry.hpp  layout.cpp  layout.hpp  node.cpp  node.hpp  path.cpp  path.hpp  pmp.cpp  pmp.hpp  render.cpp  render.hpp  rotation.cpp  rotation.hpp  transaction.hpp  value.cpp  value.hpp  value_types.cpp  value_types.hpp  viz3.cpp  viz3.hpp
viz3/: acache.py  bindings.py  colors.py  from_xml.py  lang.py  transformation.py  tree.py  utils.py  visualize.py
(+15 files in other folders)
